Update Stylelint config for Scss files

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,27 @@
 {
+  "ignoreFiles": "**/*.css",
   "extends": "stylelint-config-standard",
   "plugins": [
+    "stylelint-order",
     "stylelint-scss"
-  ]
+  ],
+  "rules": {
+    "order/declaration-block-properties-alphabetical-order": true,
+    "scss/at-import-partial-extension-blacklist": [
+     "scss"
+    ],
+    "scss/at-import-no-partial-leading-underscore": true,
+    "scss/dollar-variable-colon-space-after": "always",
+    "scss/dollar-variable-colon-space-before": "never",
+    "scss/dollar-variable-empty-line-before": "never",
+    "scss/dollar-variable-no-missing-interpolation": true,
+    "scss/double-slash-comment-whitespace-inside": "always",
+    "scss/declaration-nested-properties": "never",
+    "scss/media-feature-value-dollar-variable": "always",
+    "scss/operator-no-newline-after": true,
+    "scss/operator-no-newline-before": true,
+    "scss/operator-no-unspaced": true,
+    "scss/partial-no-import": true,
+    "scss/selector-no-redundant-nesting-selector": true
+  }
 }
