--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,12 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": [
-          "last 2 versions",
-          "> 2% in GB",
-          "IE 11"
-          ]
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "> 2% in GB", "IE 11"]
+        }
       }
-    }]
+    ]
   ]
 }
