--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,15 @@
 {
-  "extends": "airbnb",
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["prettier"],
+  "parserOptions": {
+    "ecmaVersion": 2016
+  },
   "env": {
     "browser": true,
+    "es6": true,
     "node": true
+  },
+  "rules": {
+    "prettier/prettier": "error"
   }
 }
