--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,11 +1,12 @@
 {
-  "ignoreFiles": ["**/*.css"],
+  "ignoreFiles": "**/*.css",
   "extends": "stylelint-config-standard",
   "plugins": ["stylelint-order", "stylelint-scss"],
   "rules": {
     "at-rule-no-unknown": null,
     "order/properties-alphabetical-order": true,
     "scss/at-import-no-partial-leading-underscore": true,
+    "scss/at-import-partial-extension-blacklist": ["scss"],
     "scss/at-rule-no-unknown": true,
     "scss/declaration-nested-properties": "never",
     "scss/dollar-variable-colon-space-after": "always",
