--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,6 @@
 {
   "ignoreFiles": "**/*.css",
-  "extends": "stylelint-config-standard",
+  "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
   "plugins": ["stylelint-order", "stylelint-scss"],
   "rules": {
     "at-rule-no-unknown": null,
